--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -6,13 +6,44 @@
     height: 15rem;
     background: #031F41;
     margin-left: 10rem;
+    position: relative;
+    font-size: small;
 }
 
 .section-1 {
-    width: 38.25rem;
+    width: 30rem;
     height: 5.5rem;
     background: #FFFFFF;
     border: 1px solid #031F41;
     box-sizing: border-box;
     display: flex;
+    flex-direction: row;
+    position: absolute;
+    top:0%;
+}
+
+.section-2 {
+    width: 30rem;
+    height: 10rem;
+    background: #031F41;
+    box-sizing: border-box;
+    position: absolute;
+    top:30%;
+}
+
+.post {
+    width: 15rem;
+    height: 10rem;
+}
+
+.section-3 {
+    width: 30rem;
+    height: 5.5rem;
+    background: #FFFFFF;
+    border: 1px solid #031F41;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top:70%;
 }
