--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -40,6 +40,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
+    margin: auto;
 }
 
 .icon {
