--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,5 +1,6 @@
 .wrapper {
-    background: #eee;  
+    width: 95%;
+    margin: 0 auto;
 }
 
 header {
@@ -7,10 +8,11 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid #031f41; 
 }
 
 .btn {
-    background-color: #a5c4e9;
+    background-color: #A4BFD8;
     color: #031f41;
     height: 30px;
     padding: 5px 10px;
@@ -20,7 +22,7 @@ header {
 
 nav a {
     display: inline-block;
-    padding: 5px;
+    padding: 0 35px;
 }
 
 nav img {
@@ -31,3 +33,42 @@ nav img {
     width: 50px;
     border-radius: 100%;
 }
+
+main {
+    margin: 2rem 0;
+}
+
+.cover {
+    height: 150px;
+    background-color: #031f41;
+    position: relative;
+}
+
+.cover img {
+    width: 100px;
+    display: inline-block;
+    border-radius: 100%;
+    position: absolute;
+    top: 100px;
+    left: 20px;
+}
+
+.profile-info {
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.profile-info > :not(h3) {
+    font-size: 12px;
+}
+
+.profile-info button {
+    background: #A4BFD8;
+    width: 100%;
+    border-radius: 5px;
+    margin-top: 1rem;
+    padding: 5px;
+}
+
