--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -54,10 +54,14 @@ main {
 }
 
 .profile-info {
-    width: 50%;
+    width: 40%;
     margin: 0 auto;
     text-align: center;
     margin-top: 50px;
+}
+
+.profile-info > p {
+    padding: 5px;
 }
 
 .profile-info > :not(h3) {
@@ -72,3 +76,36 @@ main {
     padding: 5px;
 }
 
+.detail {
+    width: 100%;
+    margin: 2rem 0;
+    display: flex;
+    justify-content: space-around;
+}
+
+.profile-summery {
+    display: flex;
+}
+
+.icon {
+    background: #ddd;
+    width: 50px;
+    height: 50px;
+    margin: 0 5px;
+}
+
+.summery {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.summery span {
+    display: inline-block;
+}
+
+.posts img {
+    display: inline-block;
+    width: 250px;
+    padding-right: 2rem;
+}
