--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Metamorphous&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Metamorphous&display=swap");
 
 * {
   font-family: "Merriweather";
@@ -11,4 +11,4 @@
   --blue: #031F41;
   --lightblue: #A4BFD8;
 }
-
+ */
